--- a/src/less/content10.less
+++ b/src/less/content10.less
@@ -1,7 +1,7 @@
 @content10: content10;
 
 .@{content10}-wrapper {
-  min-height: 700px;
+  // min-height: 700px;
   overflow: hidden;
 
   .@{content10} {
@@ -9,6 +9,13 @@
     padding: 64px 24px;
 
     >.title-wrapper {
+      max-width: 540px;
+      margin: 0 auto 20px;
+    }
+
+    >.explain-wrapper {
+      max-width: 630px;
+      text-align: center;
       margin: 0 auto 48px;
     }
 
