--- a/src/less/footer1.less
+++ b/src/less/footer1.less
@@ -21,6 +21,7 @@
     >h2 {
       margin-bottom: 24px;
       color: @template-text-color;
+      font-size: 18px;
     }
     a {
       color: @template-footer-text-color;
