--- a/src/less/content0.less
+++ b/src/less/content0.less
@@ -9,11 +9,17 @@
     padding: 64px 24px;
 
     >.title-wrapper {
+      margin: 0 auto 20px;
+    }
+
+    >.explain-wrapper {
+      max-width: 630px;
+      text-align: center;
       margin: 0 auto 48px;
     }
 
     &-block {
-      padding: 0 4%;
+      padding: 0 2%;
       display: inline-block;
       text-align: center;
       min-height: 200px;
