--- a/src/less/content1.less
+++ b/src/less/content1.less
@@ -9,11 +9,17 @@
     padding: 64px 24px;
 
     >.title-wrapper {
+      margin: 0 auto 20px;
+    }
+
+    >.explain-wrapper {
+      max-width: 630px;
+      text-align: center;
       margin: 0 auto 48px;
     }
 
     &-block {
-      padding: 0 4%;
+      padding: 0 3%;
       display: inline-block;
       text-align: center;
       min-height: 200px;
@@ -42,7 +48,7 @@
       &-title {
         line-height: 32px;
         margin: 10px auto;
-        font-size: 24px;
+        font-size: 18px;
       }
     }
   }
