--- a/src/less/feature2.less
+++ b/src/less/feature2.less
@@ -1,6 +1,8 @@
 @content2: content2;
 .@{content2}-wrapper {
-  height: 360px;
+  // height: 360px;
+  margin-top: 64px;
+  margin-bottom: 64px;
   .@{content2} {
     height: 100%;
     padding: 0 24px;
@@ -27,10 +29,10 @@
         position: relative !important;
       }
       .@{content2}-title {
-        font-size: 32px;
+        font-size: 24px;
         font-weight: normal;
         color: #404040;
-        margin-top: 120px;
+        margin-top: 20px;
       }
       .@{content2}-content {
         margin-top: 20px;
@@ -41,7 +43,7 @@
 
 @media screen and (max-width: 767px) {
   .@{content2}-wrapper {
-    height: 600px;
+    // height: 600px;
     .@{content2} {
       &-img {
         height: 200px;
