--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Montserrat;
+  src: url('./fonts/Montserrat-Regular.ttf');
+  font-style: normal;
+}
+
 html {
   box-sizing: border-box;
   font-weight: 400;
@@ -10,7 +16,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", Helvetica, sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
   padding: 0;
   margin: 0;
 }
@@ -19,37 +25,6 @@ a {
   text-decoration: none;
 }
 
-.card {
-  background: lightgray;
-  padding: 10px;
-  width: 300px;
-  height: 200px;
-  margin: 10px 10px;
-  color: white;
-  text-align: center;
-}
-
-.card-link {
-  color: blue;
-  border-bottom: dotted 1px;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 600;
-}
-
-.card-title {
-  color: black;
-  margin: 0;
-  padding: 0;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
-  font-weight: 800;
-  letter-spacing: 0.225em;
-  text-transform: uppercase;
-}
-
-.card__img {
-  width: 100%;
-  height: 120px;
-  object-fit: cover;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold !important;
 }
